# 09-mc-09-mc

./: .gitignore  CMakeLists.txt  README.md  comments.md
TxtResults/: resultsCircle.txt  resultsFunction12D.txt  resultsFunction5D.txt  resultsSimplex5D.txt  resultsTetrahedron.txt  resultsTriangle.txt
domain/: polytope.cpp
src/: benchmarks.cpp  benchmarks.h  ising_model.cpp  ising_model.h  ising_model_test.cpp  main.cpp  room_assignment.cpp  room_assignment.h
src/domain/: dummy_domain.h  polytope.cpp  polytope.h
src/fin/options/: american_option.h  european_option.h  option.h
src/fin/portfolio/: portfolio.cpp  portfolio.h
src/fin/pricing/: option_pricing.cpp  option_pricing.h
src/fin/risk/: var_calculator.cpp  var_calculator.h
src/integrators/: metropolis_hastings_ising.cpp  metropolis_hastings_ising.h  monte_carlo_integrator.cpp
